# AGUI1

./: .gitignore  README.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: agent.py  data.py  main.py  tools.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ApprovalCard.tsx  ChatHeader.tsx  FlightResultsCard.tsx  PageClient.tsx  Providers.tsx  Sidebar.tsx  WeatherCard.tsx
